# studio-ai-legal-compliance-agent

./: .gitignore  LICENSE  README.md  config.env.example  pyproject.toml
.github/workflows/: ci.yml
deploy/: _common.py  cleanup.py  deploy_baseline.py  deploy_multiagent.py  smoke_test.py
docs/: EVOLUTION.md  VERIFICATION.md  architecture-review.html
evals/: engine_client.py  manifest.yaml  run_evals.py  scoring.py
legacy/: README.md
legacy/gen1-baseline/: README.md  cleanup_old_deployments.py  deploy_to_agent_runtime.py  export_live_cloud_reports.py  export_reports.py  main.tf  pyproject.toml  run_dashboard.sh  run_experiments_and_consolidate.py  run_live_gcp_pipeline.py  test_adk2_orchestration.py  test_deployed_agent_runtime.py  test_frontend_headless.py  test_observability_and_memory.py  verify_live_cloud_observability.py
legacy/gen1-baseline/deploy/: agent.py  requirements.txt
legacy/gen1-baseline/deploy/src/: agent.py  observability.py  orchestration.py
legacy/gen1-baseline/deploy/src/tools/: __init__.py  ffmpeg_slicer.py  gcp_ml_tools.py
legacy/gen1-baseline/evals/: download_authentic_web_assets.py  prepare_combinatorial_assets.py  test_combinatorial_10_asset_matrix.py  test_deployed_agent_suite1_and_suite2.py  test_dual_cloud_deployments.py  test_golden_dataset.py  test_suite_2_generalizability.py
legacy/gen1-baseline/frontend/: app.py
legacy/gen1-baseline/specs/: compliance_vetting.md
legacy/gen1-baseline/src/: __init__.py  memory.py  schemas.py
legacy/gen1-baseline/src/tools/: gcp_ml_tools.py
legacy/gen2-adk2-studio/: README.md  deploy_adk2_engine.py  test_adk2_studio.py  test_live_cloud_container.py  verify_live_adk2_execution.py
src/studio_compliance/: __init__.py  config.py  hitl.py  observability.py  pipeline.py  policy.py  reporting.py  schemas.py  script_llm.py  storage.py  textprep.py
terraform/: main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_engine_client.py  test_hitl.py  test_misc.py  test_pipeline.py  test_policy.py  test_scoring.py  test_textprep_and_tools.py
(+11 files in other folders)
