[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "me-compliance-vetting-agent"
version = "1.0.0"
description = "M&E Copyright Infringement & Legal Compliance Vetting Platform built on Google Cloud ADK 2.0"
authors = [
    { name = "Studio Compliance Contributors" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "google-cloud-aiplatform>=1.45.0",
    "google-cloud-logging>=3.8.0",
    "opentelemetry-api>=1.20.0",
    "structlog>=24.1.0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0"
]
